[package]
name = "mousa"
version = "0.0.0"
edition = "2021"

[dependencies]
#非同期処理
tokio = { version = "*", features = ["full"] }
#TUI
ratatui = "*"
crossterm = "*"
#音声ライブラリ
cpal = "*"
rodio = "*"
hound = "*"
kira = "*"
rubato = "*"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
